  * Remove duplication of Hindi in languagelist.

  [ Frans Pop ]
  * Remove duplication of Icelandic in languagelist.l10n.
  * Make it possible to back up to earlier dialogs by bringing the main
    localechooser code under a state engine.
  * Display a message when changing the language is no longer possible because
    translations have been deleted. Left disabled for now because of #470258.
  * Various code cleanups.

 -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 14:54:30 +0100

localechooser (1.46) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Central Khmer (km.po) by Khoem Sokhem
  * Latvian (lv.po) by Viesturs Zarins
  * Nepali (ne.po) by Shyam Krishna Bal
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovenian (sl.po) by Matej Kovacic
  * Turkish (tr.po) by Recai Oktaş
  * Ukrainian (uk.po)
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 08:20:51 -0200

localechooser (1.45) unstable; urgency=low

  * Add new ISO-3166 codes (BL and MF) to the region map
  * Recompile wrt new iso-codes that includes the two new codes

 -- Christian Perrier <bubulle@debian.org>  Sun, 20 Jan 2008 11:06:33 +0100

localechooser (1.44) unstable; urgency=low

  * Activate Amharic
  * Add localized name for Kashmiri.
  * Add (commented) entry for Kashmiri in the language list.
  
  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Kurdish (ku.po) by Erdal Ronahi
  * Portuguese (pt.po) by Miguel Figueiredo

 -- Christian Perrier <bubulle@debian.org>  Tue, 08 Jan 2008 21:58:29 +0100

localechooser (1.43) unstable; urgency=low

  * Rebuilt with new locales package to include de_LI locale. Closes: #453614

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Malayalam (ml.po) by Praveen A