@@ -26,7 +26,8 @@ install: build
 	mkdir -p debian/$(PACKAGE)/DEBIAN
 	install -m0755 post-base-installer debian/$(PACKAGE)/usr/lib/post-base-installer.d/05localechooser
 	install -m0755 finish-install debian/$(PACKAGE)/usr/lib/finish-install.d/05localechooser
-	cat languagelist | grep -v "^#.*" >debian/$(PACKAGE)/usr/share/localechooser/languagelist
+	cat languagelist | grep -v "^#.*" | cut -d";" -f1,3- \
+		>debian/$(PACKAGE)/usr/share/localechooser/languagelist
 	chmod 0644 debian/$(PACKAGE)/usr/share/localechooser/languagelist
 	dh_installdirs etc
 	# The following while we have no other way to get SUPPORTED
