@@ -1,86 +1,0 @@
-#
-# List of translations for the language prompt
-# You just need to put your language name translated after
-# ": " (colon+space)
-#   Use of UTF-8 is MANDATORY here
-#   Be careful about using a very clean UTF-8 editor
-#
-Albanian: Shqip
-Amharic: አማርኛ
-Arabic: عربي
-Armenian: Հայերեն
-Basque: Euskaraz
-Belarusian: Беларуская
-Bengali: বাংলা
-Bosnian: Bosanski
-Bulgarian: Български
-Catalan: Català
-Chinese (Traditional): 中文(繁體)
-Chinese (Simplified): 中文(简体)
-Croatian: Hrvatski
-Czech: Čeština
-Danish: Dansk
-C: No localization
-Dutch: Nederlands
-Dzongkha: རྫོང་ཁ།
-English: English
-Esperanto: Esperanto
-Estonian: Eesti
-Finnish: Suomi
-French: Français
-Galician: Galego
-Georgian: ქართული
-German: Deutsch
-Greek: Ελληνικά
-Gujarati: ગુજરાતી
-Hebrew: עברית
-Hindi: हिन्दी 
-Hungarian: Magyar
-Indonesian: Bahasa Indonesia
-Icelandic: Íslenska
-Irish: Gaeilge
-Italian: Italiano
-Japanese: 日本語
-Kannada: ಕನ್ನಡ
-Kashmiri: कोशुर
-Kazakh: Қазақ
-Khmer: ﻿ខ្មែរ
-Korean: 한국어
-Kurdish: Kurdî
-Lao: ﻿ລາວ
-Latvian: Latviski
-Lithuanian: Lietuviškai
-Macedonian: Македонски
-Malagasy: Malagasy
-Malay: Bahasa Malaysia
-Malayalam: മലയാളഠ
-Marathi: मराठी
-Nepali: नेपाली 
-Northern Sami: Sámegillii
-Norwegian Bokmaal: Norsk bokmål
-Norwegian Nynorsk: Norsk nynorsk
-Persian: فارسی
-Polish: Polski
-Portuguese (Brazil): Português do Brasil
-Portuguese: Português
-Punjabi (Gurmukhi): ਪੰਜਾਬੀ
-Romanian: Română
-Russian: Русский
-Sanskrit: संस्कृत
-Serbian: Српски
-Slovak: Slovenčina
-Slovenian: Slovenščina
-Spanish: Español
-Swedish: Svenska
-Tagalog: Tagalog
-Tamil: தமிழ்
-Telugu: తెలుగు
-Thai: ภาษาไทย
-Turkish: Türkçe
-Ukrainian: Українська
-Urdu: اردو
-Valencian-Catalan: Valencià-Català
-Vietnamese: Tiếng Việt
-Welsh: Cymraeg
-Wolof: Wolof
-Xhosa: Xhosa
