@@ -9,6 +9,7 @@ localechooser (1.47) UNRELEASED; urgency=low
     localechooser code under a state engine.
   * Display a message when changing the language is no longer possible because
     translations have been deleted. Left disabled for now because of #470258.
+  * Merge languagelist.l10n into languagelist.
   * Various code cleanups.
 
  -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 14:54:30 +0100
